--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -15,6 +15,7 @@ ENV FLASK_RUN_PORT=5000
 RUN pip install --upgrade pip
 COPY requirements.txt ./
 RUN pip install -r requirements.txt
+RUN pip install uwsgi
 
 # Copy source code
 COPY .. .
