--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,3 +1,7 @@
+upstream portfolio {
+    server portfolio-backend:5000;
+}
+
 server {
 
     listen 80;
@@ -11,7 +15,7 @@ server {
             proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header   X-Forwarded-Host $server_name;
 
-            proxy_pass         http://portfolio-backend:5000;
+            proxy_pass         http://portfolio;
             proxy_redirect     off;
     }
 }
