--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,3 @@
-upstream portfolio {
-    server portfolio-backend:5000;
-}
-
 server {
 
     listen 80;
@@ -15,7 +11,7 @@ server {
             proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header   X-Forwarded-Host $server_name;
 
-            proxy_pass         http://portfolio;
+            proxy_pass         http://portfolio-backend:5000;
             proxy_redirect     off;
     }
 }
