--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,22 +7,12 @@ services:
             context: backend
             dockerfile: Dockerfile
         container_name: portfolio-backend
+        restart: unless-stopped
+        ports:
+            -   "5000:5000"
         networks:
             -   nginx_network
             -   portfolio_network
-
-#        nginx:
-#            image: nginx:alpine
-#            restart: unless-stopped
-#            volumes:
-#                -   ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
-#            ports:
-#                -   80:80
-#            networks:
-#                -   default
-#                -   portfolio
-#            depends_on:
-#                -   portfolio-backend
 
 networks:
     nginx_network:
