--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
         networks:
             -   nginx_network
             -   portfolio_network
+        volumes:
+            -   ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
 
     portfolio-backend:
         build:
