--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,7 @@ version: "3.8"
 services:
 
     portfolio-nginx:
-        build:
-            context: ./nginx
-            dockerfile: Dockerfile
+        image: nginx:alpine
         container_name: portfolio-nginx
         restart: unless-stopped
         ports:
