--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -17,7 +17,7 @@ COPY requirements.txt ./
 RUN pip install -r requirements.txt
 
 # Copy source code
-COPY .. .
+COPY . .
 
 # Run
 #CMD ["flask", "run"]
