--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,8 @@
 Flask==2.1.3
-gunicorn==20.1.0
+Flask-WTF==0.14.3
 
+wtforms==2.3.3
+gunicorn==20.1.0
 click==8.1.3
 colorama==0.4.5
 flask_mail==0.9.1
@@ -8,7 +10,6 @@ importlib-metadata==4.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
-pip==21.1.2
 setuptools==57.0.0
 Werkzeug==2.1.2
 wheel==0.36.2
