--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,16 +1,16 @@
-Flask==2.1.3
-Flask-WTF==0.14.3
+Flask==2.2.2
+Flask-WTF==0.15.1
+Flask-Mail==0.9.1
 
 wtforms==2.3.3
 gunicorn==20.1.0
 click==8.1.3
 colorama==0.4.5
-flask_mail==0.9.1
 importlib-metadata==4.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 setuptools==57.0.0
-Werkzeug==2.1.2
+Werkzeug==2.2.2
 wheel==0.36.2
 zipp==3.8.1
