--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,9 +12,9 @@ services:
             -   "5005:5005"
         networks:
             -   nginx_network
-            -   portfolio_old_network
+            -   portfolio_old_default
 
 networks:
     nginx_network:
         external: true
-    portfolio_old_network:
+    portfolio_old_default:
