--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -1,9 +1,6 @@
-name: Deploy to Remote Server
+name: CD
 
-on:
-  push:
-    branches:
-      - main
+on: [ push ]
 
 jobs:
   deploy:
@@ -12,6 +9,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
       - name: Deploy code
         uses: appleboy/ssh-action@master
         with:
@@ -21,6 +19,6 @@ jobs:
           port: ${{ secrets.PORT }}
           script: |
             cd Projects/portfolio_old/
-            git pull origin main
-            docker network create portfolio_old_default
+            git pull origin master
             docker compose up -d --build
+            docker restart nginx_proxy
