--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
             context: backend
             dockerfile: Dockerfile
         container_name: portfolio_old-backend
+        env_file:
+            - backend/.env
         restart: unless-stopped
         ports:
             -   "5005:5005"
