--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
         restart: unless-stopped
         ports:
             -   "5005:5005"
+        networks:
+            - portfolio_old_default
 
 networks:
     portfolio_old_default:
