--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,6 +12,7 @@ flask-wtf = "^1.1.1"
 flask-mail = "^0.9.1"
 gunicorn = "^20.1.0"
 python-dotenv = "^1.0.0"
+flask-cors = "^3.0.10"
 
 
 [build-system]
